--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   prometheus:
     image: prom/prometheus:latest
+    user: "0:0"
     command:
       - --config.file=/etc/prometheus/prometheus.yml
       - --storage.tsdb.path=/prometheus
@@ -15,6 +16,7 @@ services:
       replicas: 1
       restart_policy:
         condition: on-failure
+
 
   grafana:
     image: grafana/grafana:latest
