Update Grafana admin credentials in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,14 +19,14 @@ services:
       restart_policy:
         condition: on-failure
 
- grafana:
+  grafana:
     image: grafana/grafana:latest
     user: "0"
     volumes:
       - /mnt/cephfs/grafana:/var/lib/grafana
     environment:
-      - GF_SECURITY_ADMIN_USER=<bruker>
-      - GF_SECURITY_ADMIN_PASSWORD=<passord>
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=SvaneveienNR1
     networks:
       - monitoring
     ports:
@@ -39,4 +39,3 @@ services:
 networks:
   monitoring:
     driver: overlay
-
